# VM-chatbot

./: .gitignore  README.md  app.py  data_loader.py  groq_agent.py  main.py  pyproject.toml  requirements.txt
